# constituency-priorities

./: .gitignore  AGENTS.md  README.md  implementation_plan.md  implementation_plan_main  plan.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/app/: config.py
backend/app/api/: chat.py  priorities.py  submissions.py  themes.py  webhooks.py
backend/app/data/: census_loader.py  generate_massive_dataset.py  udise_loader.py
backend/app/db/: bigquery_client.py  schema.sql  seed_local_db.py
backend/app/ingestion/: audio_pipeline.py  image_pipeline.py  text_pipeline.py
backend/app/models/: priority.py  submission.py
backend/app/nlp/: classify.py  extract_entities.py  prompts.py
backend/app/scoring/: deficit_calculators.py  gap_score.py  gap_score_rapids.py  justification.py
backend/data/: health_score.json  local_dev.sqlite3
backend/tests/: test_classify.py  test_gap_score.py  test_ingestion.py
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/citizen/: page.tsx
frontend/app/citizen/components/: LanguageSelector.tsx  LowLiteracyFlow.tsx  PhotoSubmit.tsx  QualityWarning.tsx  SubmissionPipeline.tsx  VoiceRecorder.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/lib/: firebase.ts
frontend/lib/i18n/: strings.ts
frontend/public/: manifest.json  mock_submissions.json  sw.js
infra/: setup-gcp.sh
scripts/: generate_readme.py  generate_seed_data.py
(+11 files in other folders)
